{
  "version": 4,
  "terraform_version": "1.1.0",
  "serial": 488,
  "lineage": "725753a4-5dc9-4330-6843-63279fd2371b",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/673df29e-c2cb-48fe-b265-ff46e2beb987/resourceGroups/my_resources/providers/Microsoft.Network/applicationGateways/my_app_gateway80/backendAddressPools/my_network-beap",
                "ip_addresses": [],
                "name": "my_network-beap"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/673df29e-c2cb-48fe-b265-ff46e2beb987/resourceGroups/my_resources/providers/Microsoft.Network/applicationGateways/my_app_gateway80/backendHttpSettingsCollection/my_network-be-htst",
                "name": "my_network-be-htst",
                "path": "",
                "pick_host_name_from_backend_address": false,
                "port": 80,
                "probe_id": "",
                "probe_name": "",
                "protocol": "Http",
                "request_timeout": 60,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "firewall_policy_id": null,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/673df29e-c2cb-48fe-b265-ff46e2beb987/resourceGroups/my_resources/providers/Microsoft.Network/applicationGateways/my_app_gateway80/frontendIPConfigurations/my_network-feip",
                "name": "my_network-feip",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/673df29e-c2cb-48fe-b265-ff46e2beb987/resourceGroups/my_resources/providers/Microsoft.Network/publicIPAddresses/my-public-ip",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/673df29e-c2cb-48fe-b265-ff46e2beb987/resourceGroups/my_resources/providers/Microsoft.Network/applicationGateways/my_app_gateway80/frontendPorts/my_network-feport",
                "name": "my_network-feport",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/673df29e-c2cb-48fe-b265-ff46e2beb987/resourceGroups/my_resources/providers/Microsoft.Network/applicationGateways/my_app_gateway80/gatewayIPConfigurations/my-gateway-ip-configuration",
                "name": "my-gateway-ip-configuration",
                "subnet_id": "/subscriptions/673df29e-c2cb-48fe-b265-ff46e2beb987/resourceGroups/my_resources/providers/Microsoft.Network/virtualNetworks/my_network/subnets/frontend"
              }
            ],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/673df29e-c2cb-48fe-b265-ff46e2beb987/resourceGroups/my_resources/providers/Microsoft.Network/applicationGateways/my_app_gateway80/frontendIPConfigurations/my_network-feip",
                "frontend_ip_configuration_name": "my_network-feip",
                "frontend_port_id": "/subscriptions/673df29e-c2cb-48fe-b265-ff46e2beb987/resourceGroups/my_resources/providers/Microsoft.Network/applicationGateways/my_app_gateway80/frontendPorts/my_network-feport",
                "frontend_port_name": "my_network-feport",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/673df29e-c2cb-48fe-b265-ff46e2beb987/resourceGroups/my_resources/providers/Microsoft.Network/applicationGateways/my_app_gateway80/httpListeners/my_network-httplstn",
                "name": "my_network-httplstn",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/673df29e-c2cb-48fe-b265-ff46e2beb987/resourceGroups/my_resources/providers/Microsoft.Network/applicationGateways/my_app_gateway80",
            "identity": [],
            "location": "northeurope",
            "name": "my_app_gateway80",
            "probe": [],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/673df29e-c2cb-48fe-b265-ff46e2beb987/resourceGroups/my_resources/providers/Microsoft.Network/applicationGateways/my_app_gateway80/backendAddressPools/my_network-beap",
                "backend_address_pool_name": "my_network-beap",
                "backend_http_settings_id": "/subscriptions/673df29e-c2cb-48fe-b265-ff46e2beb987/resourceGroups/my_resources/providers/Microsoft.Network/applicationGateways/my_app_gateway80/backendHttpSettingsCollection/my_network-be-htst",
                "backend_http_settings_name": "my_network-be-htst",
                "http_listener_id": "/subscriptions/673df29e-c2cb-48fe-b265-ff46e2beb987/resourceGroups/my_resources/providers/Microsoft.Network/applicationGateways/my_app_gateway80/httpListeners/my_network-httplstn",
                "http_listener_name": "my_network-httplstn",
                "id": "/subscriptions/673df29e-c2cb-48fe-b265-ff46e2beb987/resourceGroups/my_resources/providers/Microsoft.Network/applicationGateways/my_app_gateway80/requestRoutingRules/my_network-rqrt",
                "name": "my_network-rqrt",
                "priority": 0,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "my_resources",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 2,
                "name": "Standard_Small",
                "tier": "Standard"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20150501",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": {},
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [],
            "zones": []
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_subnet.frontend",
            "azurerm_virtual_network.network",
            "azurerm_public_ip.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "net_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/673df29e-c2cb-48fe-b265-ff46e2beb987/resourceGroups/my_resources/providers/Microsoft.Network/networkSecurityGroups/acceptanceTestSecurityGroup1",
            "location": "northeurope",
            "name": "acceptanceTestSecurityGroup1",
            "resource_group_name": "my_resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "test123",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "test124",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "Production"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "my_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "availability_zone": "No-Zone",
            "domain_name_label": "mygatewaytest8011",
            "fqdn": "mygatewaytest8011.northeurope.cloudapp.azure.com",
            "id": "/subscriptions/673df29e-c2cb-48fe-b265-ff46e2beb987/resourceGroups/my_resources/providers/Microsoft.Network/publicIPAddresses/my-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.123.0.25",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "my-public-ip",
            "resource_group_name": "my_resources",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/673df29e-c2cb-48fe-b265-ff46e2beb987/resourceGroups/my_resources/providers/Microsoft.Network/virtualNetworks/my_network/subnets/backend",
            "name": "backend",
            "resource_group_name": "my_resources",
            "virtual_network_name": "my_network"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/673df29e-c2cb-48fe-b265-ff46e2beb987/resourceGroups/my_resources/providers/Microsoft.Network/virtualNetworks/my_network/subnets/frontend",
            "name": "frontend",
            "resource_group_name": "my_resources",
            "virtual_network_name": "my_network"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "c5b77d5d-00bd-4f4e-abb0-b80f4efcc39a",
            "id": "/subscriptions/673df29e-c2cb-48fe-b265-ff46e2beb987/resourceGroups/my_resources/providers/Microsoft.Network/virtualNetworks/my_network",
            "location": "northeurope",
            "name": "my_network",
            "resource_group_name": "my_resources",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/673df29e-c2cb-48fe-b265-ff46e2beb987/resourceGroups/my_resources/providers/Microsoft.Network/virtualNetworks/my_network/subnets/frontend",
                "name": "frontend"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/673df29e-c2cb-48fe-b265-ff46e2beb987/resourceGroups/my_resources/providers/Microsoft.Network/virtualNetworks/my_network/subnets/backend",
                "name": "backend"
              }
            ],
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}